examples: add initial view-container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align: center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -7,16 +7,11 @@
 
 <header>
   <h2>Test Components: </h2>
-  <ul>
-    <li>
-      <h2><a href="/">Home</a></h2>
-    </li>
-    <li>
-      <h2><a href="/babel-test">Babel Test</a></h2>
-    </li>
-    <li>
-      <h2><a href="/iterator-state-test">Iterator State Management</a></h2>
-    </li>
+  <ul style="font-size: 1rem">
+    <li><a href="/">Home</a></li>
+    <li><a href="/babel-test">Babel Test</a></li>
+    <li><a href="/iterator-state-test">Iterator State Management</a></li>
+    <li><a href="/view-container">View Container</a></li>
   </ul>
 </header>
 
