--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
     <li><a href="/babel-test">Babel Test</a></li>
     <li><a href="/iterator-state-test">Iterator State Management</a></li>
     <li><a href="/view-container">View Container</a></li>
+    <li><a href="/simpler-iterator-test">Simpler Iterator</a></li>
   </ul>
 </header>
 
