iterator-state: add child with list and async input

--- a/src/app/iterator-state-test/iterator-state-test.component.html
+++ b/src/app/iterator-state-test/iterator-state-test.component.html
@@ -14,3 +14,8 @@
   <label>Test Cancellable</label>
   <p>{{ dataResponse }} <button (click)="dataFetched()">Load Data</button></p>
 </div>
+
+<div class="section">
+  <button (click)="itemsUpdated()">Update Items</button>
+  <app-list-child-test [items$]="listItems$"></app-list-child-test>
+</div>
