iterator-child: remove RxJS dependency

--- a/src/app/iterator-state-test/iterator-state-test.component.html
+++ b/src/app/iterator-state-test/iterator-state-test.component.html
@@ -17,5 +17,5 @@
 
 <div class="section">
   <button (click)="itemsUpdated()">Update Items</button>
-  <app-list-child-test [items$]="listItems$"></app-list-child-test>
+  <app-list-child-test></app-list-child-test>
 </div>
