--- a/src/app/list-child-test/list-child-test.component.html
+++ b/src/app/list-child-test/list-child-test.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li *ngFor="let item of items$ | async; trackBy: trackByItemId">({{ item.id }}) {{ item.name }}</li>
+  <li *ngFor="let item of items; trackBy: trackByItemId">({{ item.id }}) {{ item.name }}</li>
 </ul>
