--- a/src/app/iterator-state-test/iterator-state-test.component.html
+++ b/src/app/iterator-state-test/iterator-state-test.component.html
@@ -16,6 +16,6 @@
 </div>
 
 <div class="section">
-  <button (click)="itemsUpdated()">Update Items</button>
+  <button (click)="itemUpdated()">Update Item</button>
   <app-list-child-test></app-list-child-test>
 </div>
