--- a/src/app/list-child-test/list-child-test.component.html
+++ b/src/app/list-child-test/list-child-test.component.html
@@ -1,3 +1,4 @@
+<p>Item Updates: {{ updates }}</p>
 <ul>
-  <li *ngFor="let item of items; trackBy: trackByItemId">({{ item.id }}) {{ item.name }}</li>
+  <app-list-child-item-test *ngFor="let item of items; trackBy: trackByItemId" [id]="item.id" [name]="item.name"></app-list-child-item-test>
 </ul>
