--- a/src/app/list-child-test/list-child-test.component.html
+++ b/src/app/list-child-test/list-child-test.component.html
@@ -1,4 +1,5 @@
 <p>Item Updates: {{ updates }}</p>
 <ul>
-  <app-list-child-item-test *ngFor="let item of items; trackBy: trackByItemId" [id]="item.id" [name]="item.name"></app-list-child-item-test>
+  <app-list-child-item-test *ngFor="let item of items; trackBy: trackByItemId" [id]="item.id" [name]="item.name"
+    (itemClicked)="_itemClicked($event)"></app-list-child-item-test>
 </ul>
