IIteratorStateManagement: add example with Rx

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
     <li><a href="/">Home</a></li>
     <li><a href="/babel-test">Babel Test</a></li>
     <li><a href="/iterator-state-test">Iterator State Management</a></li>
+    <li><a href="/iter-tools-state-test">Iter-Tools State Management</a></li>
     <li><a href="/view-container">View Container</a></li>
   </ul>
 </header>
