IIteratorStateManagement: move logic to class

--- a/src/app/iter-tools-state-test/iter-tools-state-test.component.html
+++ b/src/app/iter-tools-state-test/iter-tools-state-test.component.html
@@ -4,3 +4,4 @@
 <button (click)="this.click$.next($event.target)">Click Me</button>
 <p>Counter in parent: {{ state.counter }}</p>
 <app-iter-tools-state-test-child [counter]="counter$ | async"></app-iter-tools-state-test-child>
+<app-iter-tools-state-test-child [counter]="counter2$ | async"></app-iter-tools-state-test-child>
