IteratorStateTest: Use new class and make list reactive.

--- a/src/app/list-child-item-test/list-child-item-test.component.html
+++ b/src/app/list-child-item-test/list-child-item-test.component.html
@@ -1,1 +1,1 @@
-<li (click)="_itemClicked([id, name])">({{ id }}) {{ name }}</li>
+<li (click)="emitItemClicked([id, name])">({{ id }}) {{ name }}</li>
