IIteratorStateManagement: Fix bug in testing.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
   <ul style="font-size: 1rem">
     <li><a href="/">Home</a></li>
     <li><a href="/babel-test">Babel Test</a></li>
-    <li><a href="/iterator-state-test">Iterator State Management</a></li>
-    <li><a href="/iter-tools-state-test">Iter-Tools State Management</a></li>
+    <li><a href="/iterator-state-test">AsyncIterableIterator State-management 1</a></li>
+    <li><a href="/iter-tools-state-test">AsyncIterableIterator State-management 2</a></li>
     <li><a href="/view-container">View Container</a></li>
   </ul>
 </header>
