--- a/src/app/iterator-state-test/iterator-state-test.component.html
+++ b/src/app/iterator-state-test/iterator-state-test.component.html
@@ -1,4 +1,6 @@
-<h2>Alternative Iterator Test</h2>
+<h2>
+  AsyncIterableIterator State-management
+</h2>
 
 <div class="section">
   <label>Test Input</label>
