--- a/src/app/list-child-test/list-child-test.component.html
+++ b/src/app/list-child-test/list-child-test.component.html
@@ -1,3 +1,6 @@
+<h3>
+  Reactive Child
+</h3>
 <p>Item Updates: {{ _updates$ | async }}</p>
 <ul>
   <app-list-child-item-test *ngFor="let item of items; trackBy: trackByItemId" [id]="item.id" [name]="item.name"
