--- a/src/app/iter-tools-state-test/iter-tools-state-test.component.html
+++ b/src/app/iter-tools-state-test/iter-tools-state-test.component.html
@@ -1,7 +1,7 @@
 <h2>
   AsyncIterableIterator State-management
 </h2>
-<button (click)="this.click$.next('bla')">Click Me</button>
+<button (click)="this.click$.next()">Click Me</button>
 <p>Counter in parent: {{ state.counter }}</p>
 <app-iter-tools-state-test-child [counter]="counter$ | async"></app-iter-tools-state-test-child>
 <app-iter-tools-state-test-child [counter]="counter2$ | async"></app-iter-tools-state-test-child>
