--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     <li><a href="/babel-test">Babel Test</a></li>
     <li><a href="/iterator-state-test">AsyncIterableIterator State-management 1</a></li>
     <li><a href="/iter-tools-state-test">AsyncIterableIterator State-management 2</a></li>
-    <li><a href="/view-container">View Container</a></li>
+    <li><a href="/alarm">Alarm</a></li>
   </ul>
 </header>
 
